--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,16 @@
 buildscript {
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+
 
     repositories {
         mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 
 android {
@@ -44,6 +50,7 @@ android {
 }
 repositories {
     maven { url "https://jitpack.io" }
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
@@ -61,4 +68,18 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
 
     testCompile 'junit:junit:4.12'
+    compile('com.crashlytics.sdk.android:answers:1.3.6@aar') {
+        transitive = true;
+    }
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
+        transitive = true;
+    }
+    compile('com.crashlytics.sdk.android:crashlytics-ndk:1.1.2@aar') {
+        transitive = true;
+    }
+}
+crashlytics {
+    enableNdk true
+    androidNdkOut 'src/main/obj'
+    androidNdkLibsOut 'src/main/libs'
 }
